# Shimmer3_python_v1.3

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  run_shimmer.py
config/: shimmer_config.json
data/processed/: shimmer3_export_20251010_125425.csv  shimmer3_export_20251010_125425.h5  shimmer3_export_20251010_125425_statistics.json  shimmer3_export_20251010_170104.csv  shimmer3_export_20251010_170104_statistics.json  shimmer3_export_20251010_170105.csv  shimmer3_export_20251010_170105.h5  shimmer3_export_20251010_170105_statistics.json  shimmer3_export_20251010_170106.h5  shimmer3_export_20251010_170106_statistics.json  shimmer3_export_20251010_170107.h5  shimmer3_export_20251010_170107_statistics.json  shimmer3_export_20251010_170108.csv  shimmer3_export_20251010_170108.h5  shimmer3_export_20251010_170108_statistics.json  shimmer3_export_20251010_170109.h5  shimmer3_export_20251010_170109_statistics.json  shimmer3_export_20251010_170110.h5  shimmer3_export_20251010_170110_statistics.json  shimmer3_export_20251010_170111.h5  shimmer3_export_20251010_170111_statistics.json  shimmer3_export_20251010_170112.h5  shimmer3_export_20251010_170112_statistics.json  shimmer3_export_20251010_170113.h5  shimmer3_export_20251010_170113_statistics.json  shimmer3_export_20251010_170114.h5  shimmer3_export_20251010_170114_statistics.json  (+160 more)
shimmer3_streamer.egg-info/: PKG-INFO  requires.txt
src/: __init__.py  bluetooth_manager.py  data_exporter.py  data_logger.py  main.py  shimmer_client.py
src/utils/: __init__.py  (+4 more)
tests/: test_config.py  test_shell.py
(+58 files in other folders)
